# Story2Proposal

./: .gitignore  AGENTS.md  README.md  config.py  gui_agent.py  gui_agent_demo.py  pyproject.toml  runner.py
.claude/: settings.local.json
api/: models.py  repository.py  run_job.py  server.py
api/test/: __init__.py  section_writer_probe.json  section_writer_probe.py
backend/: README.md
backend/api/: models.py  repository.py  run_job.py  server.py
backend/domain/: contracts.py  evaluation.py  rendering.py  review.py  state.py  validation.py  visual_artifacts.py
backend/graph/: agents.py  build.py
backend/schemas/: blueprint.py  contract.py  draft.py  eval.py  review.py  story.py
backend/servers/: workflow.py
domain/: __init__.py  contracts.py  evaluation.py  rendering.py  review.py  state.py  validation.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx
graph/: __init__.py  agents.py  build.py
prompts/: architect.md  data_fidelity_evaluator.md  reasoning_evaluator.md  refiner.md  renderer.md  section_writer.md  visual_evaluator.md  visual_repair.md
schemas/: __init__.py  blueprint.py  contract.py  draft.py  eval.py  review.py
scripts/: run_demo.py  run_eval.py
servers/: __init__.py  workflow.py
src/: README.md  __init__.py  agent.py  memory.py  skill.py
src_test/: example_drawio_agent.py  example_hook_agent.py  example_mcp_server.py  example_multi_agent_handoff.py
story2proposal/: __init__.py  llm_io.py
test/: example_memory_agent.py  example_stream_agent.py
tools/: __init__.py  windows_env_tools.py
(+55 files in other folders)
