[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "agent-graph-framework"
version = "0.1.0"
description = "A lightweight graph-driven agent framework with MCP integration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "common-expression-language>=0.3.1",
    "httpx>=0.28.1",
    "Jinja2>=3.1.6",
    "jsonschema>=4.25.1",
    "mcp>=1.17.0",
    "openai>=1.109.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "Pygments>=2.19.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src", "story2proposal"]
